Added update and delete of remaining endpoints
