# src/controllers/contentItemController.js
@@ -10,6 +10,25 @@ export const getAllContentItems = async (req, res) => {
   }
 };
 
+export const getContentItemById = async (req, res) => {
+  const { itemId } = req.params;
+
+  try {
+    const contentItem = await ContentItem.findByPk(itemId);
+
+    if (!contentItem) {
+      return res.status(404).json({ error: "Item de conteúdo não encontrada" });
+    }
+
+    return res.status(200).json(contentItem);
+  } catch (error) {
+    console.error("Erro ao buscar item de conteúdo por ID:", error);
+    return res
+      .status(500)
+      .json({ error: "Erro ao buscar item de conteúdo por ID" });
+  }
+};
+
 export const getItemsInList = async (req, res) => {
   const { listId } = req.params;
   try {
@@ -24,7 +43,8 @@ export const getItemsInList = async (req, res) => {
 };
 
 export const createContentItem = async (req, res) => {
-  const { title, original_title, year, genre, completed, category_id } = req.body;
+  const { title, original_title, year, genre, completed, category_id } =
+    req.body;
   try {
     const contentItem = await ContentItem.create({
       title,
@@ -37,6 +57,48 @@ export const createContentItem = async (req, res) => {
     return res.status(201).json(contentItem);
   } catch (error) {
     console.error("Erro ao criar item de conteúdo:", error);
+    return res.status(500).json({ error: "Erro interno do servidor" });
+  }
+};
+
+export const updateContentItem = async (req, res) => {
+  const { itemId } = req.params;
+  let updatedContentItemData = req.body;
+
+  try {
+    const contentItem = await ContentItem.findByPk(itemId);
+
+    if (!contentItem) {
+      return res.status(404).json({ error: "Item de conteúdo não encontrado" });
+    }
+
+    await contentItem.update(updatedContentItemData);
+
+    return res.status(200).json({
+      message: "Item de conteúdo atualizado com sucesso",
+      contentItem,
+    });
+  } catch (error) {
+    console.error("Erro ao atualizar item de conteúdo:", error);
+    return res.status(500).json({ error: "Erro ao atualizar item de conteúdo" });
+  }
+};
+
+export const deleteContentItem = async (req, res) => {
+  const { itemId } = req.params;
+
+  try {
+    const contentItem = await ContentItem.findByPk(itemId);
+
+    if (!contentItem) {
+      return res.status(404).json({ error: "Item de conteúdo não encontrado" });
+    }
+
+    await contentItem.destroy();
+    return res
+      .status(204)
+      .json({ message: "Item de conteúdo excluído com sucesso" });
+  } catch (error) {
     return res.status(500).json({ error: "Erro interno do servidor" });
   }
 };
